--- a/Génie Electrique 3as/GE_3AS_C.html
+++ b/Génie Electrique 3as/GE_3AS_C.html
@@ -90,7 +90,7 @@
                 <div class="pdf_Cour">
                     <a href="Cours/Ch1/Ch1C1.ppsx">
                         <p>ملف العرض</p>                   
-                        <i class="fa-regular fa-file-powerpoint" style="color: #e65c00;"></i>
+                        <i class="fa-solid fa-file-powerpoint" style="color: #ff7300;"></i>
                     </a>
                     <a href="Cours/Ch1/Ch1C1.pdf">
                         <p>وثيقة الأستاذ</p>                   
@@ -110,7 +110,7 @@
                 <div class="pdf_Cour">
                     <a href="Cours/Ch1/Ch1C2.ppsx">
                         <p>ملف العرض</p>                   
-                        <i class="fa-regular fa-file-powerpoint" style="color: #e65c00;"></i>
+                        <i class="fa-solid fa-file-powerpoint" style="color: #ff7300;"></i>
                     </a>
                     <a href="Cours/Ch1/Ch1C2.pdf">
                         <p>وثيقة الأستاذ</p>                   
@@ -130,7 +130,7 @@
                 <div class="pdf_Cour">
                     <a href="Cours/Ch1/Ch1C3.ppsx">
                         <p>ملف العرض</p>                   
-                        <i class="fa-regular fa-file-powerpoint" style="color: #e65c00;"></i>
+                        <i class="fa-solid fa-file-powerpoint" style="color: #ff7300;"></i>
                     </a>
                     <a href="Cours/Ch1/Ch1C3.pdf">
                         <p>وثيقة الأستاذ</p>                   
@@ -150,7 +150,7 @@
                 <div class="pdf_Cour">
                     <a href="Cours/Ch1/Ch1C4.ppsx">
                         <p>ملف العرض</p>                   
-                        <i class="fa-regular fa-file-powerpoint" style="color: #e65c00;"></i>
+                        <i class="fa-solid fa-file-powerpoint" style="color: #ff7300;"></i>
                     </a>
                     <a href="Cours/Ch1/Ch1C4E.pdf">
                         <p>وثيقة التلميذ</p>                   
@@ -166,7 +166,7 @@
                 <div class="pdf_Cour">
                     <a href="Cours/Ch1/Ch1C5.ppsx">
                         <p>ملف العرض</p>                   
-                        <i class="fa-regular fa-file-powerpoint" style="color: #e65c00;"></i>
+                        <i class="fa-solid fa-file-powerpoint" style="color: #ff7300;"></i>
                     </a>
                     <a href="Cours/Ch1/Ch1C5.pdf">
                         <p>وثيقة الأستاذ</p>                   
@@ -186,7 +186,7 @@
                 <div class="pdf_Cour">
                     <a href="Cours/Ch1/Ch1C6.ppsx">
                         <p>ملف العرض</p>                   
-                        <i class="fa-regular fa-file-powerpoint" style="color: #e65c00;"></i>
+                        <i class="fa-solid fa-file-powerpoint" style="color: #ff7300;"></i>
                     </a>
                     <a href="Cours/Ch1/Ch1C6.pdf">
                         <p>وثيقة الأستاذ</p>                   
@@ -206,7 +206,7 @@
                 <div class="pdf_Cour">
                     <a href="Cours/Ch1/Ch1C7.ppsx">
                         <p>ملف العرض</p>                   
-                        <i class="fa-regular fa-file-powerpoint" style="color: #e65c00;"></i>
+                        <i class="fa-solid fa-file-powerpoint" style="color: #ff7300;"></i>
                     </a>
                     <a href="Cours/Ch1/Ch1C7.pdf">
                         <p>وثيقة الأستاذ</p>                   
@@ -234,7 +234,7 @@
                 <div class="pdf_Cour">
                     <a href="Cours/Ch2/Ch2C1.ppsx">
                         <p>ملف العرض</p>                   
-                        <i class="fa-regular fa-file-powerpoint" style="color: #e65c00;"></i>
+                        <i class="fa-solid fa-file-powerpoint" style="color: #ff7300;"></i>
                     </a>
                     <a href="Cours/Ch2/Ch2C1.pdf">
                         <p>وثيقة الأستاذ</p>                   
@@ -254,7 +254,7 @@
                 <div class="pdf_Cour">
                     <a href="Cours/Ch2/Ch2C2.ppsx">
                         <p>ملف العرض</p>                   
-                        <i class="fa-regular fa-file-powerpoint" style="color: #e65c00;"></i>
+                        <i class="fa-solid fa-file-powerpoint" style="color: #ff7300;"></i>
                     </a>
                     <a href="Cours/Ch2/Ch2C2.pdf">
                         <p>وثيقة الأستاذ</p>                   
@@ -274,7 +274,7 @@
                 <div class="pdf_Cour">
                     <a href="Cours/Ch2/Ch2C3.ppsx">
                         <p>ملف العرض</p>                   
-                        <i class="fa-regular fa-file-powerpoint" style="color: #e65c00;"></i>
+                        <i class="fa-solid fa-file-powerpoint" style="color: #ff7300;"></i>
                     </a>
                     <a href="Cours/Ch2/Ch2C3.pdf">
                         <p>وثيقة الأستاذ</p>                   
@@ -294,7 +294,7 @@
                 <div class="pdf_Cour">
                     <a href="Cours/Ch2p2/Ch2C4.ppsx">
                         <p>ملف العرض</p>                   
-                        <i class="fa-regular fa-file-powerpoint" style="color: #e65c00;"></i>
+                        <i class="fa-solid fa-file-powerpoint" style="color: #ff7300;"></i>
                     </a>
                     <a href="Cours/Ch2p2/Ch2C4E.pdf">
                         <p>وثيقة التلميذ</p>                   
@@ -310,7 +310,7 @@
                 <div class="pdf_Cour">
                     <a href="Cours/Ch2p2/Ch2C5.pptx">
                         <p>ملف العرض</p>                   
-                        <i class="fa-regular fa-file-powerpoint" style="color: #e65c00;"></i>
+                        <i class="fa-solid fa-file-powerpoint" style="color: #ff7300;"></i>
                     </a>
                     <a href="Cours/Ch2p2/Ch2C5.pdf">
                         <p>وثيقة الأستاذ</p>                   
@@ -329,7 +329,25 @@
                         <i class="fa-solid fa-magnifying-glass" style="color: #000000;"></i>
                     </div>
                 </div>
+                <div class="text_Cour">
+                    <div>
+                        <p>PIC درس الميكرومراقب</p>    
+                        <i class="fa-sharp fa-regular fa-folder-open"></i>                
+                    </div>
+                </div>
                 <div class="pdf_Cour">
+                    <a href="Cours/Ch3/Ch3C1.ppsx">
+                        <p>ملف العرض</p>                   
+                        <i class="fa-solid fa-file-powerpoint" style="color: #ff7300;"></i>
+                    </a>
+                    <a href="Cours/Ch3/Ch3C1.pdf">
+                        <p>وثيقة الأستاذ</p>                   
+                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
+                    </a>
+                    <a href="Cours/Ch3/Ch3C1E.pdf">
+                        <p>وثيقة التلميذ</p>                   
+                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
+                    </a>
                     <!--<a href="">
                         <p></p>                   
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
@@ -343,7 +361,54 @@
                         <i class="fa-solid fa-magnifying-glass" style="color: #000000;"></i>
                     </div>
                 </div>
+                <div class="text_Cour">
+                    <div>
+                        <p>درس المحول أحادي الطور</p>    
+                        <i class="fa-sharp fa-regular fa-folder-open"></i>                
+                    </div>
+                </div>
                 <div class="pdf_Cour">
+                    <a href="Cours/Ch4/Ch4C1.ppsx">
+                        <p>ملف العرض</p>                   
+                        <i class="fa-solid fa-file-powerpoint" style="color: #ff7300;"></i>
+                    </a>
+                    <a href="Cours/Ch4/Ch4C1.pdf">
+                        <p>وثيقة الأستاذ</p>                   
+                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
+                    </a>
+                    <a href="Cours/Ch4/Ch4C1E.pdf">
+                        <p>وثيقة التلميذ</p>                   
+                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
+                    </a>
+                    <a href="Cours/Ch4/Ch4C1A1.pdf">
+                        <p>قوانين المحول أحادي الطور</p>                   
+                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
+                    </a>
+                    <!--<a href="">
+                        <p></p>                   
+                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
+                    </a>-->
+                </div>
+
+                <div class="text_Cour">
+                    <div>
+                        <p>درس التقويم المراقب</p>    
+                        <i class="fa-sharp fa-regular fa-folder-open"></i>                
+                    </div>
+                </div>
+                <div class="pdf_Cour">
+                    <a href="Cours/Ch4/Ch4C2.ppsx">
+                        <p>ملف العرض</p>                   
+                        <i class="fa-solid fa-file-powerpoint" style="color: #ff7300;"></i>
+                    </a>
+                    <a href="Cours/Ch4/Ch4C2E.pdf">
+                        <p>وثيقة التلميذ</p>                   
+                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
+                    </a>
+                    <a href="Cours/Ch4/Ch4C2A1.pps">
+                        <p>حل نشاط الدرس </p>                   
+                        <i class="fa-solid fa-file-powerpoint" style="color: #ff7300;"></i>
+                    </a>
                     <!--<a href="">
                         <p></p>                   
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
