--- a/Physique 3as/PH_3AS_SE.html
+++ b/Physique 3as/PH_3AS_SE.html
@@ -130,6 +130,10 @@
                         <p> RC المكثفة وثنائي القطب</p>                   
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
                     </a>
+                    <a href="Séries/Ch3S2.pdf">
+                        <p>RL الوشيعة وثنائي القطب</p>                   
+                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
+                    </a>
                     <!--<a href="">
                         <p></p>                   
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
@@ -144,6 +148,10 @@
                     </div>
                 </div>
                 <div class="pdf_Cour">
+                    <a href="Séries/Ch4S1.pdf">
+                        <p>تطور جملة كيميائية نحو حالة التوازن</p>                   
+                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
+                    </a>
                     <!--<a href="">
                         <p></p>                   
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
