--- a/Génie Electrique 3as/GE_3AS_SDC.html
+++ b/Génie Electrique 3as/GE_3AS_SDC.html
@@ -145,6 +145,30 @@
                     </div>
                 </div>
                 <div class="pdf_Cour">
+                    <a href="Devoir/2ème/Devoir1.pdf">
+                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
+                        <p>Devoir N°1 2016/2017 avec solution</p>                   
+                    </a>
+                    <a href="Devoir/2ème/Devoir2.pdf">
+                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
+                        <p>Devoir N°2 2016/2017 avec solution</p>                   
+                    </a>
+                    <a href="Devoir/2ème/Devoir3.pdf">
+                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
+                        <p>Devoir N°2 2018/2019 avec solution</p>                   
+                    </a>
+                    <a href="Devoir/2ème/Devoir4.pdf">
+                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
+                        <p>Devoir N°1 2019/2020 avec solution</p>                   
+                    </a>
+                    <a href="Devoir/2ème/Devoir5.pdf">
+                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
+                        <p>Devoir N°2 2019/2020 avec solution</p>                   
+                    </a>
+                    <a href="Devoir/2ème/Devoir6.pdf">
+                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
+                        <p>Devoir N°1 2020/2021 avec solution</p>                   
+                    </a>
                     <!--<a href="">
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
                         <p></p>                   
