--- a/Licence/L3S6.html
+++ b/Licence/L3S6.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Licence-S</title>
+    <title>Licence-S6</title>
     <link rel="stylesheet" href="Home.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"/>
@@ -34,28 +34,16 @@
     <hr>
         
     <div id="html2">
-        <a href="#">
+        
+        <a href="L3S6/AB.html">
             <div class="html2_C">
                 <div class="text_C">
-                    <h2></h2>
-                    <p> Licence  | Semestre </p>
+                    <h3>Applications mobiles</h3>
+                    <p> Licence 3 | Semestre 6 </p>
                     <i class="fa-solid fa-unlock-keyhole" style="color: #fafafa;"></i>
                 </div>
                 <div class="image_C">
-                    <img src="" alt="Image circulaire">
-                </div>
-            </div>
-        </a>
-
-        <a href="#">
-            <div class="html2_C">
-                <div class="text_C">
-                    <h2></h2>
-                    <p> Licence  | Semestre </p>
-                    <i class="fa-solid fa-key fa-shake" style="color: #ffffff;"></i>
-                </div>
-                <div class="image_C">
-                    <img src="Camera/IMG-7335.JPG" alt="Image circulaire">
+                    <img src="../Camera/AB.jpg" alt="Image circulaire">
                 </div>
             </div>
         </a>
