--- a/Home.html
+++ b/Home.html
@@ -149,6 +149,19 @@
     <hr> 
     
     <div id="html2">
+        <a href="Licence/L2S3.html">
+            <div class="html2_C">
+                <div class="text_C">
+                    <h2>Informatique</h2>
+					<p>Systèmes Informatiques</p>
+                    <p>Licence 2 | Semestre 3</p>
+                </div>
+                <div class="image_C">
+                    <img src="Camera/IMG-7339.JPG" alt="Image circulaire">
+                </div>
+            </div>
+        </a>
+
         <a href="Licence/L2S4.html">
             <div class="html2_C">
                 <div class="text_C">
@@ -174,7 +187,7 @@
                 </div>
             </div>
         </a>
-        <a href="#">
+        <a href="Licence/L3S6.html">
             <div class="html2_C">
                 <div class="text_C">
                     <h2>Informatique</h2>
