--- a/Licence/L2S4.html
+++ b/Licence/L2S4.html
@@ -34,6 +34,19 @@
     <hr>
         
     <div id="html2">
+        <a href="L2S4/TL.html">
+            <div class="html2_C">
+                <div class="text_C">
+                    <h3>Théorie des langages</h3>
+                    <p> Licence 2 | Semestre 4 </p>
+                    <i class="fa-solid fa-unlock-keyhole" style="color: #fafafa;"></i>
+                </div>
+                <div class="image_C">
+                    <img src="../Camera/TL.png" alt="Image circulaire">
+                </div>
+            </div>
+        </a>
+
         <a href="L2S4/POO.html">
             <div class="html2_C">
                 <div class="text_C">
@@ -51,7 +64,7 @@
         <a href="#">
             <div class="html2_C">
                 <div class="text_C">
-                    <h3>Développement Web</h2>
+                    <h3>Développement Web</h3>
                     <p> Licence  | Semestre </p>
                     <i class="fa-solid fa-key fa-shake" style="color: #ffffff;"></i>
                 </div>
