--- a/Licence/L2S4/TL.html
+++ b/Licence/L2S4/TL.html
@@ -79,7 +79,7 @@
                     </a>-->
                 </div>
                 <div class="no-overflow1">
-                    <p dir="ltr" style="text-align: left;">+ Série de TD N°1</p>
+                    <p dir="ltr" style="text-align: left;">+ Série de TD N°1 </p>
                     <p dir="ltr" style="text-align: left;">+ Série de TP N°1 (la suite de la série TP sera donnée
                         sur place pendant les séances de TP)<br></p>
                 </div>
@@ -167,14 +167,157 @@
                 <div class="text_Cour">
                     <div>
                         <i class="fa-solid fa-magnifying-glass" style="color: #000000;"></i>
+                        <p>Support de cours et de TD (2022/2023)</p>
+                    </div>
+                </div>
+
+                <div class="pdf_Cour">
+                    <a href="TL/2022-2023/TL2023.pdf">
+                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
+                        <p>Support de cours et de TD </p>                   
+                    </a>
+                </div>
+                <div class="text_Cour">
+                    <div>
+                        <i class="fa-solid fa-magnifying-glass" style="color: #000000;"></i>
+                        <p>Chapitre 1| Notions fondamentales en théorie des langages</p>
+                    </div>
+                </div>
+                <div class="pdf_Cour">
+                    <a href="TL/2022-2023/Cha1.pdf">
+                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
+                        <p>Chapitre 01</p>                   
+                    </a>
+                    <a href="TL/2022-2023/Sé1.pdf">
+                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
+                        <p>Exercices de TD</p>                   
+                    </a>
+                </div>
+
+                div class="text_Cour">
+                    <div>
+                        <i class="fa-solid fa-magnifying-glass" style="color: #000000;"></i>
+                        <p>Chapitre 2| Les automates à états finis (AEF)</p>
+                    </div>
+                </div>
+                <div class="pdf_Cour">
+                    <a href="TL/2022-2023/Cha2.pdf">
+                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
+                        <p>Chapitre 02</p>                   
+                    </a>
+                    <a href="TL/2022-2023/Sé2.pdf">
+                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
+                        <p>Exercices de TD</p>                   
+                    </a>
+                </div>
+
+                div class="text_Cour">
+                    <div>
+                        <i class="fa-solid fa-magnifying-glass" style="color: #000000;"></i>
+                        <p>Chapitre 3| Les langages réguliers </p>
+                    </div>
+                </div>
+                <div class="pdf_Cour">
+                    <a href="TL/2022-2023/Cha3.pdf">
+                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
+                        <p>Chapitre 03</p>                   
+                    </a>
+                    <a href="TL/2022-2023/Sé3.pdf">
+                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
+                        <p>Exercices de TD</p>                   
+                    </a>
+                </div>
+
+                div class="text_Cour">
+                    <div>
+                        <i class="fa-solid fa-magnifying-glass" style="color: #000000;"></i>
+                        <p>Chapitre 4| Les langages algébriques</p>
+                    </div>
+                </div>
+                <div class="pdf_Cour">
+                    <a href="TL/2022-2023/Cha4.pdf">
+                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
+                        <p>Chapitre 04</p>                   
+                    </a>
+                    <a href="TL/2022-2023/Sé4.pdf">
+                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
+                        <p>Exercices de TD</p>                   
+                    </a>
+                </div>
+                <hr>
+
+                <div class="text_Cour">
+                    <div>
+                        <i class="fa-solid fa-magnifying-glass" style="color: #000000;"></i>
+                        <p>Support de TP (2022-2023)</p>
+                    </div>
+                </div>
+                <div class="pdf_Cour">
+                    <a href="TL/2022-2023/Support de TP.pdf">
+                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
+                        <p>Support de TP</p>                   
+                    </a>
+                </div>
+
+                <div class="text_Cour">
+                    <div>
+                        <i class="fa-solid fa-magnifying-glass" style="color: #000000;"></i>
+                        <p>Série 1| Prise en main</p>
+                    </div>
+                </div>
+                <div class="pdf_Cour">
+                    <a href="TL/2022-2023/Sétp1.pdf">
+                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
+                        <p>Prise en main</p>                   
+                    </a>
+                </div>
+
+                <div class="text_Cour">
+                    <div>
+                        <i class="fa-solid fa-magnifying-glass" style="color: #000000;"></i>
+                        <p>Série 2| opérations sur les mots et les langages</p>
+                    </div>
+                </div>
+                <div class="pdf_Cour">
+                    <a href="TL/2022-2023/Sétp2.pdf">
+                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
+                        <p>opérations sur les mots et les langages</p>                   
+                    </a>
+                </div>
+                
+                <div class="text_Cour">
+                    <div>
+                        <i class="fa-solid fa-magnifying-glass" style="color: #000000;"></i>
+                        <p>Série 3| les AEF</p>
+                    </div>
+                </div>
+                <div class="pdf_Cour">
+                    <a href="TL/2022-2023/Sétp3.pdf">
+                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
+                        <p>Troisième série : les AEF</p>                   
+                    </a>
+                </div>
+
+                <div class="text_Cour">
+                    <div>
+                        <i class="fa-solid fa-magnifying-glass" style="color: #000000;"></i>
+                        <p>Série 4|  les expressions régulières</p>
+                    </div>
+                </div>
+                <div class="pdf_Cour">
+                    <a href="TL/2022-2023/Sétp4.pdf">
+                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
+                        <p> les expressions régulières</p>                   
+                    </a>
+                </div>
+
+                <div class="text_Cour">
+                    <div>
+                        <i class="fa-solid fa-magnifying-glass" style="color: #000000;"></i>
                         <p>Sujets des examens</p>
                     </div>
                 </div>
                 <div class="pdf_Cour">
-                    <a href="">
-                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
-                        <p></p>                   
-                    </a>
                     <!--<a href="">
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
                         <p></p>                   
