--- a/Licence/L2S4/TL.html
+++ b/Licence/L2S4/TL.html
@@ -180,7 +180,7 @@
                 <div class="text_Cour">
                     <div>
                         <i class="fa-solid fa-magnifying-glass" style="color: #000000;"></i>
-                        <p>Chapitre 1| Notions fondamentales en théorie des langages</p>
+                        <p>Chapitre 1 | Notions fondamentales en théorie des langages</p>
                     </div>
                 </div>
                 <div class="pdf_Cour">
@@ -194,10 +194,10 @@
                     </a>
                 </div>
 
-                div class="text_Cour">
+                <div class="text_Cour">
                     <div>
                         <i class="fa-solid fa-magnifying-glass" style="color: #000000;"></i>
-                        <p>Chapitre 2| Les automates à états finis (AEF)</p>
+                        <p>Chapitre 2 | Les automates à états finis (AEF)</p>
                     </div>
                 </div>
                 <div class="pdf_Cour">
@@ -211,10 +211,10 @@
                     </a>
                 </div>
 
-                div class="text_Cour">
+                <div class="text_Cour">
                     <div>
                         <i class="fa-solid fa-magnifying-glass" style="color: #000000;"></i>
-                        <p>Chapitre 3| Les langages réguliers </p>
+                        <p>Chapitre 3 | Les langages réguliers </p>
                     </div>
                 </div>
                 <div class="pdf_Cour">
@@ -228,10 +228,10 @@
                     </a>
                 </div>
 
-                div class="text_Cour">
+                <div class="text_Cour">
                     <div>
                         <i class="fa-solid fa-magnifying-glass" style="color: #000000;"></i>
-                        <p>Chapitre 4| Les langages algébriques</p>
+                        <p>Chapitre 4 | Les langages algébriques</p>
                     </div>
                 </div>
                 <div class="pdf_Cour">
@@ -262,7 +262,7 @@
                 <div class="text_Cour">
                     <div>
                         <i class="fa-solid fa-magnifying-glass" style="color: #000000;"></i>
-                        <p>Série 1| Prise en main</p>
+                        <p>Série 1 | Prise en main</p>
                     </div>
                 </div>
                 <div class="pdf_Cour">
@@ -275,7 +275,7 @@
                 <div class="text_Cour">
                     <div>
                         <i class="fa-solid fa-magnifying-glass" style="color: #000000;"></i>
-                        <p>Série 2| opérations sur les mots et les langages</p>
+                        <p>Série 2 | opérations sur les mots et les langages</p>
                     </div>
                 </div>
                 <div class="pdf_Cour">
@@ -288,7 +288,7 @@
                 <div class="text_Cour">
                     <div>
                         <i class="fa-solid fa-magnifying-glass" style="color: #000000;"></i>
-                        <p>Série 3| les AEF</p>
+                        <p>Série 3 | les AEF</p>
                     </div>
                 </div>
                 <div class="pdf_Cour">
@@ -301,7 +301,7 @@
                 <div class="text_Cour">
                     <div>
                         <i class="fa-solid fa-magnifying-glass" style="color: #000000;"></i>
-                        <p>Série 4|  les expressions régulières</p>
+                        <p>Série 4 |  les expressions régulières</p>
                     </div>
                 </div>
                 <div class="pdf_Cour">
