--- a/Licence/L2S4/TL.html
+++ b/Licence/L2S4/TL.html
@@ -166,7 +166,7 @@
 
                 <div class="text_Cour">
                     <div>
-                        <i class="fa-solid fa-magnifying-glass" style="color: #000000;"></i>
+                        <i class="fa-sharp fa-regular fa-folder-open"></i>
                         <p>Support de cours et de TD (2022/2023)</p>
                     </div>
                 </div>
@@ -248,7 +248,7 @@
 
                 <div class="text_Cour">
                     <div>
-                        <i class="fa-solid fa-magnifying-glass" style="color: #000000;"></i>
+                        <i class="fa-sharp fa-regular fa-folder-open"></i>
                         <p>Support de TP (2022-2023)</p>
                     </div>
                 </div>
@@ -310,6 +310,7 @@
                         <p> les expressions régulières</p>                   
                     </a>
                 </div>
+                <hr>
 
                 <div class="text_Cour">
                     <div>
