--- a/Licence/L3S6.html
+++ b/Licence/L3S6.html
@@ -47,6 +47,19 @@
                 </div>
             </div>
         </a>
+
+        <a href="L3S6/AB.html">
+            <div class="html2_C">
+                <div class="text_C">
+                    <h3>Sécurité informatique</h3>
+                    <p> Licence 3 | Semestre 6 </p>
+                    <i class="fa-solid fa-unlock-keyhole" style="color: #fafafa;"></i>
+                </div>
+                <div class="image_C">
+                    <img src="../Camera/SECU.jpg" alt="Image circulaire">
+                </div>
+            </div>
+        </a>
         
     </div>
     <hr>
