--- a/Licence/L3S6/SECU.html
+++ b/Licence/L3S6/SECU.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Economie numérique et veille stratégique L3</title>
+    <title>Sécurité informatique L3</title>
     <link rel="stylesheet" href="../L3.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"/>
@@ -36,24 +36,23 @@
 
     <div id="html2">
         <div class="text_h2_C2">
-            <p>Economie numérique et veille stratégique</p>
-            <p>Licence 3 | Semestre 5 </p>
+            <p>Sécurité informatique</p>
+            <p>Licence 3 | Semestre 6 </p>
         </div>
         <div class="Cours_C2">
             <div class="Cour">
                 <h2></h2>
                 
-
                 <div class="text_Cour">
                     <div>
                         <i class="fa-solid fa-magnifying-glass" style="color: #000000;"></i>
-                        <p>Chapitre 1: Economie numérique</p>
+                        <p>Sécurité informatique</p>
                     </div>
                 </div>
                 <div class="pdf_Cour">
-                    <a href="Envs/cours 1 Economie numerique.pdf">
+                    <a href="SECU/Cours-Sécurité-L3-2018-1.pdf">
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
-                        <p>Economie numérique</p>                   
+                        <p>Sécurité informatique</p>                   
                     </a>
                     <!--<a href="">
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
@@ -65,13 +64,13 @@
                 <div class="text_Cour">
                     <div>
                         <i class="fa-solid fa-magnifying-glass" style="color: #000000;"></i>
-                        <p>Chapitre 2: veille stratégique</p>
+                        <p>La Cryptographie</p>
                     </div>
                 </div>
                 <div class="pdf_Cour">
-                    <a href="Envs/Chapitre 2  Veille Strategique .pdf">
+                    <a href="SECU/cryptographie-L3.pdf">
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
-                        <p>veille stratégique</p>                   
+                        <p>Cryptographie</p>                   
                     </a>
                     <!--<a href="">
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
@@ -83,13 +82,13 @@
                 <div class="text_Cour">
                     <div>
                         <i class="fa-solid fa-magnifying-glass" style="color: #000000;"></i>
-                        <p>Chapitre 3: La veille stratégique et les réseaux sociaux</p>
+                        <p>La cryptanalyse</p>
                     </div>
                 </div>
                 <div class="pdf_Cour">
-                    <a href="Envs/Chapitre 3  La veille et les reseaux sociaux (1).pdf">
+                    <a href="SECU/cryptanalyse-L3.pdf">
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
-                        <p>La veille et les réseaux sociaux</p>                   
+                        <p>cryptanalyse</p>                   
                     </a>
                     <!--<a href="">
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
@@ -101,14 +100,10 @@
                 <div class="text_Cour">
                     <div>
                         <i class="fa-solid fa-magnifying-glass" style="color: #000000;"></i>
-                        <p>Examen</p>
+                        <p>Sujets des Examens</p>
                     </div>
                 </div>
                 <div class="pdf_Cour">
-                    <a href="Envs/Examen2024.pdf">
-                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
-                        <p>Examen 2023-2024</p>                   
-                    </a>
                     <!--<a href="">
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
                         <p></p>                   
