--- a/Licence/L3S6.html
+++ b/Licence/L3S6.html
@@ -48,7 +48,7 @@
             </div>
         </a>
 
-        <a href="L3S6/AB.html">
+        <a href="L3S6/SECU.html">
             <div class="html2_C">
                 <div class="text_C">
                     <h3>Sécurité informatique</h3>
