--- a/Licence/L2S3.html
+++ b/Licence/L2S3.html
@@ -34,15 +34,15 @@
     <hr>
         
     <div id="html2">
-        <a href="#">
+        <a href="L2S3/TG.html">
             <div class="html2_C">
                 <div class="text_C">
-                    <h2></h2>
-                    <p> Licence  | Semestre </p>
+                    <h3>théorie des graphes</h3>
+                    <p> Licence 2 | Semestre 3</p>
                     <i class="fa-solid fa-unlock-keyhole" style="color: #fafafa;"></i>
                 </div>
                 <div class="image_C">
-                    <img src="" alt="Image circulaire">
+                    <img src="../Camera/TG.jpg" alt="Image circulaire">
                 </div>
             </div>
         </a>
@@ -50,12 +50,12 @@
         <a href="#">
             <div class="html2_C">
                 <div class="text_C">
-                    <h2></h2>
-                    <p> Licence  | Semestre </p>
+                    <h3>Logique Mathématique</h3>
+                    <p> Licence 2 | Semestre 3</p>
                     <i class="fa-solid fa-key fa-shake" style="color: #ffffff;"></i>
                 </div>
                 <div class="image_C">
-                    <img src="Camera/IMG-7335.JPG" alt="Image circulaire">
+                    <img src="../Camera/LM.PNG" alt="Image circulaire">
                 </div>
             </div>
         </a>
