--- a/Licence/L2S3/TG.html
+++ b/Licence/L2S3/TG.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Economie numérique et veille stratégique L3</title>
+    <title>théorie des graphes L3</title>
     <link rel="stylesheet" href="../L3.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"/>
@@ -36,8 +36,8 @@
 
     <div id="html2">
         <div class="text_h2_C2">
-            <p></p>
-            <p>Licence 2 | Semestre 4 </p>
+            <p>Graph theory</p>
+            <p>Licence 2 | Semestre 3 </p>
         </div>
         <div class="Cours_C2">
             <div class="Cour">
@@ -47,13 +47,21 @@
                 <div class="text_Cour">
                     <div>
                         <i class="fa-solid fa-magnifying-glass" style="color: #000000;"></i>
-                        <p></p>
+                        <p>Chapter 1 | basic notions in graph theory</p>
                     </div>
                 </div>
                 <div class="pdf_Cour">
-                    <a href="">
+                    <a href="TG/ch1.pdf">
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
-                        <p></p>                   
+                        <p>Chapter course material</p>                   
+                    </a>
+                    <a href="TG/td1.pdf">
+                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
+                        <p>Tutorial series n°1</p>                   
+                    </a>
+                    <a href="TG/td2.pdf">
+                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
+                        <p>Tutorial series n°2</p>                   
                     </a>
                     <!--<a href="">
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
@@ -65,13 +73,39 @@
                 <div class="text_Cour">
                     <div>
                         <i class="fa-solid fa-magnifying-glass" style="color: #000000;"></i>
-                        <p></p>
+                        <p>Chapter 2 | trees and arborescences</p>
                     </div>
                 </div>
                 <div class="pdf_Cour">
-                    <a href="">
+                    <a href="TG/ch2.pdf">
+                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
+                        <p>Chapter course material</p>                   
+                    </a>
+                    <a href="TG/td3.pdf">
+                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
+                        <p>Tutorial series n°3</p>                   
+                    </a>
+                    <!--<a href="">
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
                         <p></p>                   
+                    </a>-->
+                </div>
+                <hr> 
+
+                <div class="text_Cour">
+                    <div>
+                        <i class="fa-solid fa-magnifying-glass" style="color: #000000;"></i>
+                        <p>Chapter 3 | shortest path problems </p>
+                    </div>
+                </div>
+                <div class="pdf_Cour">
+                    <a href="TG/ch3.pdf">
+                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
+                        <p>Chapter course material</p>                   
+                    </a>
+                    <a href="TG/td4.pdf">
+                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
+                        <p>Tutorial series n°4</p>                   
                     </a>
                     <!--<a href="">
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
@@ -83,13 +117,17 @@
                 <div class="text_Cour">
                     <div>
                         <i class="fa-solid fa-magnifying-glass" style="color: #000000;"></i>
-                        <p></p>
+                        <p>Chapter 4 | flow problems</p>
                     </div>
                 </div>
                 <div class="pdf_Cour">
-                    <a href="">
+                    <a href="TG/ch4.pdf">
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
-                        <p></p>                   
+                        <p>Chapter course material</p>                   
+                    </a>
+                    <a href="TG/td5.pdf">
+                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
+                        <p>Tutorial series n°5</p>                   
                     </a>
                     <!--<a href="">
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
@@ -101,13 +139,17 @@
                 <div class="text_Cour">
                     <div>
                         <i class="fa-solid fa-magnifying-glass" style="color: #000000;"></i>
-                        <p>Sujets des examens</p>
+                        <p>Miscellaneous</p>
                     </div>
                 </div>
                 <div class="pdf_Cour">
+                    <a href="TG/final 23.pdf">
+                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
+                        <p>Final Exam : January 2023</p>                   
+                    </a>
                     <a href="">
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
-                        <p></p>                   
+                        <p>Model answers of the final Exam : January 2023</p>                   
                     </a>
                     <!--<a href="">
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
