--- a/Licence/L1S1.html
+++ b/Licence/L1S1.html
@@ -37,8 +37,8 @@
         <a href="#">
             <div class="html2_C">
                 <div class="text_C">
-                    <h2></h2>
-                    <p> Licence  | Semestre </p>
+                    <h2>Algèbre 1</h2>
+                    <p> Licence 1 | Semestre 1</p>
                     <i class="fa-solid fa-unlock-keyhole" style="color: #fafafa;"></i>
                 </div>
                 <div class="image_C">
